// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MobileControls component > should match a snapshot 1`] = `
<DocumentFragment>
  <div
    aria-hidden="true"
    class="mocked-styled-0 el-mobile-controls-bg"
  />
  <div
    class="mocked-styled-1 el-mobile-controls"
    id=":r0:"
  >
    <button
      aria-controls=":r0:"
      aria-disabled="false"
      class="el-button el-mobile-controls-floating-button"
      data-is-icon-only="true"
      data-size="medium"
      data-variant="primary"
    >
      <span
        aria-hidden="true"
        class="mocked-styled-4 el-button-icon-container"
      >
        <svg
          class="el-icon"
          color="inherit"
          data-size="100%"
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20 11H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2M4 7h16a1 1 0 1 0 0-2H4a1 1 0 0 0 0 2m16 10H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2"
          />
        </svg>
      </span>
    </button>
  </div>
</DocumentFragment>
`;

exports[`MobileControls component > should match a snapshot with full props 1`] = `
<DocumentFragment>
  <div
    aria-hidden="true"
    class="mocked-styled-0 el-mobile-controls-bg"
  />
  <div
    class="el-mobile-controls-visible el-mobile-controls"
    id=":r1:"
  >
    <a
      aria-hidden="true"
      class="mocked-styled-2 el-mobile-control-item"
      role="button"
    >
      Item One
    </a>
    <a
      aria-hidden="true"
      class="mocked-styled-2 el-mobile-control-item"
      role="button"
    >
      Item Two
    </a>
    <a
      aria-hidden="true"
      class="mocked-styled-2 el-mobile-control-item"
      role="button"
    >
      Item Three
    </a>
    <button
      aria-controls=":r1:"
      aria-disabled="false"
      class="el-button el-mobile-controls-floating-button"
      data-is-icon-only="true"
      data-size="medium"
      data-variant="primary"
    >
      <span
        aria-hidden="true"
        class="mocked-styled-4 el-button-icon-container"
      >
        add
      </span>
    </button>
  </div>
</DocumentFragment>
`;
